# looptime

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.agent/workflows/: documentation_style.md
.github/workflows/: ci.yaml  publish.yaml  thorough.yaml
docs/: conf.py  configuration.rst  getting-started.rst  index.rst  introduction.rst  nuances.rst  tools.rst
looptime/: .gitignore  __init__.py  chronometers.py  enabler.py  loops.py  math.py  patchers.py  plugin.py  policies.py  timeproxies.py
looptime/_internal/: chronometers.py  enabler.py  loops.py  math.py  patchers.py  plugin.py  timeproxies.py
tests/: conftest.py  test_chronometers.py  test_enabler.py  test_initialisation.py  test_patching.py  test_plugin.py  test_readme.py  test_subclassing.py  test_time_moves.py  test_time_on_executors.py  test_time_on_io_idle.py  test_timeproxies.py
